prometheus/k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-dashboard
  labels:
    app: grafana
    component: core
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: grafana.apps.test.mira.annarchy.net
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
